# yt-music-backup

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  streamlit_app.py
ytmb/: all_playlist.py  api_client.py  config.py  db.py  main.py  models.py
