[tool.poetry]
name = "ytmb"
version = "0.1.0"
description = ""
authors = ["George Holt <georgeholt77@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ytmusicapi = "^1.10.1"
sqlalchemy = "^2.0.40"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
notebook = "^7.3.2"
ruff = "0.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
