[tool.poetry]
name = "ytmb"
version = "0.1.0"
description = ""
authors = ["George Holt <georgeholt77@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ytmusicapi = "^1.10.1"
sqlalchemy = "^2.0.40"
tqdm = "^4.67.1"
pandas = "^2.2.3"
streamlit = "^1.45.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
notebook = "^7.3.2"
ruff = "0.9.4"
repo2txt = "^0.1.6"

[tool.poetry.scripts]
ytmb = "ytmb.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
